--- a/src/home-page/home-page.css
+++ b/src/home-page/home-page.css
@@ -16,7 +16,7 @@
 
 #landing-page-h1 {
   font-size: 4em;
-  color: #0662db;
+  color: #044CA9;
 }
 
 #landing-summary{
