--- a/src/sign-in/sign-in.css
+++ b/src/sign-in/sign-in.css
@@ -80,7 +80,7 @@
   border: none;
   border-radius: 5px;
   outline: none;
-  background-color: #0b6efd;
+  background-color: #083D87;
   color: white;
   font-family: "Poppins";
   margin: 5px 0px;
@@ -93,7 +93,8 @@
 }
 
 #submit-btn:disabled {
-  background-color: #0b70fd50;
+  background-color: #031a3a;
+  cursor: not-allowed;
 }
 
 .error {
